@@ -8,16 +8,23 @@
 package com.powsybl.dynawo.algorithms;
 
 import com.powsybl.commons.PowsyblException;
+import com.powsybl.commons.report.ReportNode;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.contingency.ContingencyElement;
+import com.powsybl.contingency.SidedContingencyElement;
 import com.powsybl.dynawo.DynawoSimulationContext;
 import com.powsybl.dynawo.models.BlackBoxModel;
 import com.powsybl.dynawo.models.events.ContextDependentEvent;
 import com.powsybl.dynawo.models.events.EventDisconnectionBuilder;
+import com.powsybl.dynawo.models.macroconnections.MacroConnect;
 import com.powsybl.dynawo.models.macroconnections.MacroConnectionsAdder;
+import com.powsybl.dynawo.models.macroconnections.MacroConnector;
+import com.powsybl.dynawo.parameters.ParametersSet;
+import com.powsybl.dynawo.security.DynamicSecurityAnalysisReports;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.TwoSides;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.*;
 
 /**
  * @author Laurent Issertial <laurent.issertial at rte-france.com>
@@ -25,29 +32,65 @@ import java.util.stream.Collectors;
 public final class ContingencyEventModelsFactory {
 
     public static List<ContingencyEventModels> createFrom(List<Contingency> contingencies, DynawoSimulationContext context,
-                                                           MacroConnectionsAdder macroConnectionsAdder, double contingenciesStartTime) {
+                                                          MacroConnectionsAdder macroConnectionsAdder,
+                                                          double contingenciesStartTime,
+                                                          ReportNode reportNode) {
         return contingencies.stream()
-                .map(c -> {
-                    ContingencyEventModels cem = new ContingencyEventModels(c, c.getElements().stream()
-                            .map(ce -> createContingencyEventModel(ce, context, contingenciesStartTime))
-                            .toList());
-                    // Set Contingencies connections and parameters
-                    macroConnectionsAdder.setMacroConnectorAdder(cem.macroConnectorsMap()::computeIfAbsent);
-                    macroConnectionsAdder.setMacroConnectAdder(cem.macroConnectList()::add);
-                    cem.eventModels().forEach(em -> {
-                        em.createMacroConnections(macroConnectionsAdder);
-                        em.createDynamicModelParameters(context, cem.eventParameters()::add);
-                    });
-                    return cem;
-                })
-                .collect(Collectors.toList());
+                .map(c -> createFrom(c, context, macroConnectionsAdder, contingenciesStartTime, reportNode))
+                .filter(Objects::nonNull)
+                .toList();
     }
 
-    private static BlackBoxModel createContingencyEventModel(ContingencyElement element, DynawoSimulationContext context, double contingenciesStartTime) {
-        BlackBoxModel bbm = EventDisconnectionBuilder.of(context.getNetwork())
+    public static ContingencyEventModels createFrom(Contingency contingency, DynawoSimulationContext context,
+                                                    MacroConnectionsAdder macroConnectionsAdder,
+                                                    double contingenciesStartTime,
+                                                    ReportNode reportNode) {
+        List<BlackBoxModel> eventModels = createContingencyEventModelList(contingency, context, contingenciesStartTime, reportNode);
+        if (eventModels.isEmpty()) {
+            return null;
+        }
+        Map<String, MacroConnector> macroConnectorsMap = new HashMap<>();
+        List<MacroConnect> macroConnectList = new ArrayList<>();
+        List<ParametersSet> eventParameters = new ArrayList<>(eventModels.size());
+        // Set Contingencies connections and parameters
+        macroConnectionsAdder.setMacroConnectorAdder(macroConnectorsMap::computeIfAbsent);
+        macroConnectionsAdder.setMacroConnectAdder(macroConnectList::add);
+        eventModels.forEach(em -> {
+            em.createMacroConnections(macroConnectionsAdder);
+            em.createDynamicModelParameters(context, eventParameters::add);
+        });
+        return new ContingencyEventModels(contingency, eventModels, macroConnectorsMap, macroConnectList, eventParameters);
+    }
+
+    private static List<BlackBoxModel> createContingencyEventModelList(Contingency contingency,
+                                                                       DynawoSimulationContext context,
+                                                                       double contingenciesStartTime,
+                                                                       ReportNode reportNode) {
+        return contingency.getElements().stream()
+                .map(ce -> createContingencyEventModel(ce, context, contingenciesStartTime, reportNode))
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private static BlackBoxModel createContingencyEventModel(ContingencyElement element,
+                                                             DynawoSimulationContext context,
+                                                             double contingenciesStartTime,
+                                                             ReportNode reportNode) {
+        Network network = context.getNetwork();
+        EventDisconnectionBuilder builder = EventDisconnectionBuilder.of(network)
                 .staticId(element.getId())
-                .startTime(contingenciesStartTime)
-                .build();
+                .startTime(contingenciesStartTime);
+        if (element instanceof SidedContingencyElement sidedElement && sidedElement.getVoltageLevelId() != null) {
+            TwoSides side = SidedContingencyElement.getContingencySide(network, sidedElement);
+            if (side != null) {
+                builder.disconnectOnly(side);
+            } else {
+                DynamicSecurityAnalysisReports.createContingencyVoltageIdNotFoundReportNode(reportNode,
+                        sidedElement.getId(), sidedElement.getVoltageLevelId());
+                return null;
+            }
+        }
+        BlackBoxModel bbm = builder.build();
         if (bbm == null) {
             throw new PowsyblException("Contingency element " + element.getType() + " not supported");
         }
